--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Marco Sousa",
 	"description": "A project that does something awesome",
+  "license": "MIT",
 	"keywords": [
 		"freecodecamp",
 		"npm",
