--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Marco Sousa",
 	"description": "A project that does something awesome",
   "license": "MIT",
+  "version": "1.2.0",
 	"keywords": [
 		"freecodecamp",
 		"npm",
