--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"microservices"
 	],
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+    "moment": "2.14.0"
 	},
 	"main": "server.js",
 	"scripts": {
